# gold-level-calculator

./: .gitignore  README.md  gold-level-calculator.cabal
app/: Main.hs  Many.hs  One.hs
data/: GOLD levels.csv  GOLD levels.ods  GOLD users bad.csv  GOLD users good.csv  GOLD users.csv
src/: Calc.hs  IOActions.hs  Main.hs  OptParse.hs  Parse.hs  Types.hs  main.hs
test/: Test.hs  TestCalc.hs  TestIOActions.hs  TestParse.hs  TestTypes.hs  Util.hs
