name:                   gold-level-calculator
version:                0.1.0.0
build-type:             Simple
cabal-version:          >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      Types
                      , Parse
                      , Calc
                      , IOActions
  build-depends:        base
                      , bytestring
                      , text
                      , vector
                      , containers
                      , cassava
                      , attoparsec
                      , QuickCheck
  default-language:     Haskell2010

executable gold-level-calculator
  main-is:              Main.hs
  hs-source-dirs:       app
  build-depends:        base
                      , gold-level-calculator
                      , bytestring
                      , text
                      , vector
                      , containers
                      , cassava
                      , attoparsec
                      , QuickCheck
                      , optparse-applicative
  default-language:     Haskell2010

test-suite gold-level-calculator-test
  type:                 exitcode-stdio-1.0
  main-is:              Test.hs
  hs-source-dirs:       test
  other-modules:        TestParse
                      , TestCalc
  build-depends:        base
                      , gold-level-calculator
                      , bytestring
                      , text
                      , vector
                      , containers
                      , cassava
                      , attoparsec
                      , QuickCheck
  default-language:     Haskell2010
