name:                   gold-level-calculator
version:                0.1.0.0
build-type:             Simple
cabal-version:          >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      Types
                      , Parse
                      , Calc
                      , IOActions
  build-depends:        base
                      , bytestring
                      , text
                      , vector
                      , containers
                      , cassava
                      , attoparsec
                      , QuickCheck
                      , directory
                      , filepath
  default-language:     Haskell2010

executable calc-one
  main-is:              One.hs
  hs-source-dirs:       app
  build-depends:        base
                      , gold-level-calculator
                      , bytestring
                      , text
                      , vector
                      , containers
                      , cassava
                      , attoparsec
                      , QuickCheck
                      , optparse-applicative
  default-language:     Haskell2010

executable calc-many
  main-is:              Many.hs
  hs-source-dirs:       app
  build-depends:        base
                      , gold-level-calculator
                      , bytestring
                      , text
                      , vector
                      , containers
                      , cassava
                      , attoparsec
                      , QuickCheck
                      , optparse-applicative
  default-language:     Haskell2010

test-suite calc-test
  type:                 exitcode-stdio-1.0
  main-is:              Test.hs
  hs-source-dirs:       test
  other-modules:        TestParse
                      , TestCalc
                      , TestIOActions
                      , Util
  build-depends:        base
                      , gold-level-calculator
                      , bytestring
                      , text
                      , vector
                      , containers
                      , cassava
                      , attoparsec
                      , QuickCheck
                      , directory
                      , filepath
                      , silently
  default-language:     Haskell2010
